# llm-regression-ci

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: eval.yml
data/: golden_dataset_v1.0.0.json
prompts/: v1.0.0.yaml
scripts/: build_corpus.py  generate_golden_dataset.py  run_eval_ci.py
src/: ci_artifacts.py  diff_runner.py  drift_detector.py  earnings_qa.py  eval_runner.py  golden_loader.py  models.py  prompt_loader.py  report_generator.py  scorer.py  slack_alerter.py
src/corpus/: chunker.py  edgar.py  extractor.py
tests/: test_ci_artifacts.py  test_corpus.py  test_diff_runner.py  test_drift_detector.py  test_earnings_qa.py  test_eval_runner.py  test_golden_loader.py  test_golden_schema.py  test_prompt_versioning.py  test_report_generator.py  test_scorer.py  test_slack_alerter.py
