[project]
name = "model-regression-detection"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai==2.43.0",
    "deepeval==4.0.6",
    "pydantic==2.13.4",
    "PyYAML==6.0.3",
    "ruamel.yaml==0.19.1",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "streamlit==1.58.0",
    "click==8.3.3",
    "pymupdf>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "respx==0.23.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
